--- a/.gitignore
+++ b/.gitignore
@@ -8,24 +8,51 @@
 # User-specific files
 .Ruserdata
 
-# Example code in package build process
-*-Ex.R
+# R projects
+.Rproj.user
+.Rhistory
+.RData
+.Ruserdata
 
-# Output files from R CMD build
-/*.tar.gz
+# usernames and passwords for db connections
+database.csv
 
-# Output files from R CMD check
-/*.Rcheck/
+# confidential fishery dependent data
+*confidential*
+
+
+
+# folders
+Documents/
+
+# large files
+
+
+# Don't track data
+*.xlsx
+*.xlsm
+*.docx
+*.pptx
+*.Rdata
+
+# Don't track binary or fig files
+*.docx
+*.pptx
+*.png
+*.pdf
+*.png
+
+# ignore shape files
+shapefiles
+
+# ignore zip files
+*.zip
+
+# Windows thumbnail cache files
+Thumbs.db
 
 # RStudio files
 .Rproj.user/
-
-# produced vignettes
-vignettes/*.html
-vignettes/*.pdf
-
-# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
-.httr-oauth
 
 # knitr and R markdown default cache directories
 *_cache/
